--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -140,7 +140,7 @@
         <article class="service-box video-box">
             <h2>Guarda il Video</h2>
             <p>Questo video spiega in modo semplice come funziona il diritto d'autore e perché è importante rispettarlo:</p>
-            <iframe src="Ai.mp4" allowfullscreen></iframe>
+            <iframe src="AI.mp4" allowfullscreen></iframe>
         </article>
     </section>
 </main>
